--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="simpan">Simpan</string>
     <string name="satuan">Satuan (Lt,Pcs,Pack,gr)</string>
     <string name="jumlah">Jumlah</string>
+    <string name="harga_satuan">Harga Satuan (Rp)</string>
+
+    <string name="input_placeholder_nama">Masukkan nama barang</string>
+    <string name="input_placeholder_jumlah">Masukkan jumlah barang</string>
+    <string name="input_placeholder_satuan">Pilih satuan</string>
+    <string name="input_placeholder_harga">Masukkan harga satuan</string>
 </resources>
