feat: bottom nav

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="input_placeholder_jumlah">Masukkan jumlah barang</string>
     <string name="input_placeholder_satuan">Pilih satuan</string>
     <string name="input_placeholder_harga">Masukkan harga satuan</string>
+    <string name="title_product">Product</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_scan">Scan</string>
 </resources>
