--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,14 @@
     <string name="email_placeholder_2">masukkan email</string>
     <string name="password_placeholder_2">massukan password</string>
 
-
     <string name="title_product">Product</string>
     <string name="title_profile">Profile</string>
     <string name="title_scan">Scan</string>
+
+    <!--   Capture Receipt   -->
+    <string name="overlay">Overlay</string>
+    <string name="gallery_button">Gallery Button</string>
+    <string name="camera_button">Camera Button</string>
+    <string name="retake">Retake</string>
+    <string name="next">Continue</string>
 </resources>
