--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,15 @@
     <string name="camera_button">Camera Button</string>
     <string name="retake">Retake</string>
     <string name="next">Continue</string>
+
+    <!--   Capture Receipt Result   -->
+    <string name="edit_struk">Edit Struk</string>
+    <string name="konfirmasi">Konfirmasi</string>
+    <string name="struk">Struk</string>
+    <string name="total_harga">Total Harga</string>
+    <string name="rp0">Rp0</string>
+    <string name="item_0kg">Item 0kg</string>
+    <string name="_0x">0x</string>
+
+    <!--   Item Product   -->
 </resources>
