--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="input_placeholder_satuan">Pilih satuan</string>
     <string name="input_placeholder_harga">Masukkan harga satuan</string>
 
+    <!--    Buat Edit Produk-->
+    <string name="edit">Edit</string>
+
     <!--   Profile Page   -->
     <string name="profile_image">Profile Image</string>
     <string name="edit_profile">Edit Profile</string>
